Ajout de la dépendance kotlinx-coroutines-core Avancement sur l'application editeur : - Récupération en arrière plan des commentaires utilisateurs depuis kafka en respectant le schema repository - Ajout de jeu - Consultation des commentaires - Ajout des entités et DAO nécessaires - Création du schéma avro Commentaire