@@ -1,25 +1,25 @@
-package org.steam2.entites;
+package org.steam2.editeur.daos;
 
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.EntityManagerFactory;
 import jakarta.persistence.TypedQuery;
-import org.steam2.exceptions.LoginException;
+import org.steam2.editeur.entites.Editeur;
+import org.steam2.editeur.exceptions.LoginException;
 
 import java.util.List;
 
 public class EditeurDAO {
 
-    private EntityManagerFactory emf;
+    private final EntityManagerFactory emf;
 
     public EditeurDAO(EntityManagerFactory emf) {
         this.emf = emf;
     }
 
     public Editeur identifier(String nom, String hashPassword) {
-        EntityManager em = emf.createEntityManager();
-        try {
+        try (EntityManager em = emf.createEntityManager()) {
             TypedQuery<Editeur> q = em.createQuery(
-                "SELECT e FROM Editeur e WHERE e.nom = :nom", Editeur.class);
+                    "SELECT e FROM Editeur e WHERE e.nom = :nom", Editeur.class);
             q.setParameter("nom", nom);
 
             List<Editeur> resultats = q.getResultList();
@@ -28,15 +28,13 @@ public class EditeurDAO {
                 throw new LoginException("Aucun éditeur trouvé avec le nom : " + nom);
             }
 
-            Editeur e = resultats.get(0);
+            Editeur e = resultats.getFirst();
 
             if (e.getPassword().equals(hashPassword)) {
                 return e;
             } else {
                 throw new LoginException("Mot de passe incorrect pour l'éditeur " + nom);
             }
-        } finally {
-            em.close();
         }
     }
 }
